# TensorSharp

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_zh-cn.md  Directory.Build.props  FEATURES.md  FEATURES_zh-cn.md  MODEL_DOWNLOADS.md  MODEL_DOWNLOADS_zh-cn.md  QWEN35_TENSOR_PARALLELISM_DESIGN.md  README.md  README_zh-cn.md  TENSOR_PARALLELISM_PLAN.md  TensorSharp.slnx  USAGE.md  USAGE_zh-cn.md
AdvUtils/: AdvUtils.csproj  AdvUtils.csproj.lscache
InferenceWeb.Tests/: BackendCatalogTests.cs  BatchedExecutorTests.cs  BpeTokenizerTests.cs  ChatGenerationPipelineDocumentTests.cs  ConfigFileArgsTests.cs  ContinuousBatchSchedulerTests.cs  CpuDecodeProfileBench.cs  CudaAllocatorConcurrencyTests.cs  CudaBackendTests.cs  CudaDecodeAttentionWrapTests.cs  CudaKvCacheResizeTests.cs  CudaLongDecodeReproTests.cs  DiffusionGemmaTests.cs  EngineParallelInferenceTests.cs  ExecutionPlannerTests.cs  GatherScatterTests.cs  Gemma4AudioEncoderTests.cs  Gemma4BatchedForwardTests.cs  Gemma4BatchedPerfBench.cs  Gemma4MtpTests.cs  GgmlCopyDtypeTests.cs  GptOssBatchedCorrectnessTests.cs  GptOssBatchedPerfBench.cs  GptOssLongDecodeReproTests.cs  ImageProcessorTests.cs  InferenceWeb.Tests.csproj  InferenceWeb.Tests.csproj.lscache  KvCacheDtypeQ4Tests.cs  ManagedQuantizedOpsTests.cs  Mistral3BatchedForwardTests.cs  MlxBackendTests.cs  ModelContextLengthTests.cs  ModelServiceUploadLoggingTests.cs  MtpSpeculativeExecutionTests.cs  NemotronBatchedCorrectnessTests.cs  NemotronBatchedPerfBench.cs  NemotronConvTests.cs  PagedKvCacheCodecTests.cs  PagedKvCacheTests.cs  ParallelThroughputBench.cs  (+24 more)
TensorSharp.Backends.Cuda/: CudaAllocator.cs  CudaBackend.cs  CudaBasicOps.cs  CudaBlas.cs  CudaContext.cs  CudaCpuFallback.cs  CudaCublasHandle.cs  CudaDevice.cs  CudaDeviceMemoryPool.cs  CudaEvent.cs  CudaFusedOps.cs  CudaGraphCapture.cs  CudaKernelOps.cs  CudaKernels.cs  CudaModule.cs  CudaP2PCommunicator.cs  CudaProfileCounters.cs  CudaQuantizedOps.cs  CudaStorage.cs  CudaStream.cs  ITensorParallelGroup.cs  TensorParallelGroup.cs  TensorSharp.Backends.Cuda.csproj  TensorSharp.Backends.Cuda.csproj.lscache
TensorSharp.Backends.GGML/: GgmlAllocator.cs  GgmlBasicOps.cs  GgmlContext.cs  GgmlMemoryPool.cs  GgmlNative.cs  GgmlStorage.cs  TensorSharp.Backends.GGML.csproj  TensorSharp.Backends.GGML.csproj.lscache
TensorSharp.Backends.MLX/: MlxAllocator.cs  MlxBackend.cs  MlxBasicOps.cs  MlxCompiledOps.cs  MlxCpuFallback.cs  MlxFallbackOps.cs  MlxFusedOps.cs  MlxMemorySnapshot.cs  MlxNative.cs  MlxQuantizedOps.cs  MlxStorage.cs  MlxWorker.cs  MoeExpertOffload.cs  TensorSharp.Backends.MLX.csproj  TensorSharp.Backends.MLX.csproj.lscache  build-native-macos.sh
TensorSharp.Backends.MLX/Native/: CMakeLists.txt
TensorSharp.Cli/: InteractiveSession.cs  Program.cs  TensorSharp.Cli.csproj  TensorSharp.Cli.csproj.lscache
TensorSharp.Core/: DType.cs  Half.cs  IAllocator.cs  Ops.cs  Storage.cs  Tensor.cs  TensorApplyCPU.cs  TensorComputePrimitives.cs  TensorDimIterState.cs  TensorDimensionHelpers.cs  TensorIterState.cs  TensorShape.cs  TensorSharp.Core.csproj  TensorSharp.Core.csproj.lscache  TensorView.cs
TensorSharp.Distributed/: DistributedTensorParallelGroup.cs  DistributedTpConfig.cs  TcpCommunicator.cs  TensorSharp.Distributed.csproj
TensorSharp.GGML.Native/: CMakeLists.txt  build-linux.sh  build-macos.sh  build-windows.ps1  ggml_api_exports.def  ggml_ops_core.cpp  ggml_ops_diffusion.cpp  ggml_ops_diffusion_sample.cu  ggml_ops_elementwise.cpp  ggml_ops_fused.cpp  ggml_ops_gated_delta_net.cpp  ggml_ops_gemma4_batched.cpp  ggml_ops_gemma4_decode.cpp  ggml_ops_gemma4_moe.cpp  ggml_ops_gemma4_verify.cpp  ggml_ops_internal.h  ggml_ops_mamba2.cpp  ggml_ops_mask.cu  ggml_ops_matmul.cpp  ggml_ops_moe.cpp  ggml_ops_norm_attn.cpp  ggml_ops_paged_attention.cpp  ggml_ops_qwen35_decode.cpp  ggml_ops_qwen35_recurrent_prefill.cpp  ggml_ops_qwen35_verify.cpp  ggml_ops_qwen_image.cpp  ggml_ops_transformer.cpp  ggml_ops_transformer_common.h  ggml_ops_transformer_prefill.cpp
TensorSharp.GGML.Native/tests/GgmlManagedParity/: CasesElementwise.cs  CasesMatmul.cs  CasesNormAttn.cs  CasesTraining.cs  GgmlManagedParity.csproj  Harness.cs  Program.cs
TensorSharp.GGML.Native/tests/InferenceEngineSmoke/: Program.cs
TensorSharp.Models/: BackendExecutionPlan.cs  Half.cs  IQuantGrids.cs  KvBlockTransfer.cs  KvCacheStorage.cs  ManagedQuantizedOps.cs  ModelBase.cs  ModelMultimodalInjector.cs  MtpSpeculativeDecoder.cs  NativeDequant.cs  PdfPageImageExtractor.cs  PdfTextExtractor.cs  TensorSharp.Models.csproj  TensorSharp.Models.csproj.lscache
TensorSharp.Runtime/: BpeTokenizer.cs  ChatTemplate.cs  ConfigFileArgs.cs  Contracts.cs  GgufReader.cs  IKvBlockCodec.cs  Jinja2Template.cs  KVCache.cs  KVCachePromptRenderer.cs  KvBlockHash.cs  ModelDownloader.cs  ModelPrimitives.cs  OutputParser.cs  PagedKvBlockStore.cs  PagedKvCacheConfig.cs  PagedKvCacheManager.cs  PrefillChunking.cs  PromptRenderer.cs  RedisKvBlockTier.cs  SamplingConfig.cs  SentencePieceTokenizer.cs  SsdKvBlockTier.cs  StructuredOutputs.cs  TensorSharp.Runtime.csproj  TensorSharp.Runtime.csproj.lscache  TokenSampler.cs  TurboQuantKvCodec.cs
TensorSharp.Server/: API_EXAMPLES.md  API_EXAMPLES_zh-cn.md  BackendCatalog.cs  ChatGenerationPipeline.cs  ChatHistoryPreparer.cs  InferenceEngineHost.cs  InferenceQueue.cs  InferenceTelemetry.cs  ModelLifecycleService.cs  ModelService.cs  OpenAIResponseFormatParser.cs  Program.cs  SessionKvCacheManager.cs  TensorSharp.Server.csproj  TensorSharp.Server.csproj.lscache  TextUploadHelper.cs
TensorSharp.TestMatrix/: Program.cs  README.md  README_zh-cn.md  TensorSharp.TestMatrix.csproj
config/: README.md  auto-download.json  cli-basic.json  diffusiongemma-26b-a4b-q3.json  diffusiongemma-26b-a4b-q4.json  gemma-4-12b.json  gemma-4-26b-a4b.json  gemma-4-e4b.json  gpt-oss-20b.json  qwen-image-edit-2511.json  qwen-image-edit.json  qwen-image-rapid-nsfw.json  qwen3.5-9b-iq4_xs.json  qwen3.5-9b-q8.json  qwen3.5-9b-uncensored-q8.json  qwen3.6-27b.json  qwen3.6-35b-a3b.json  server-basic.json  variables.json
docs/: BOOK.md  BOOK_zh-cn.md  model_cards.md  (+9 more)
(+271 files in other folders)
